topics/kubernetes/uru-k8-ingress/host-ingress-demo/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
