topics/kubernetes/uru-k8-ingress/host-ingress-demo/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urukundu-path-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: urukundu.com
      http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 80
